fixed video overlapping on home page, new science image

--- a/app/assets/stylesheets/desktop/main.sass
+++ b/app/assets/stylesheets/desktop/main.sass
@@ -1558,7 +1558,7 @@
                   padding: 0
                   vertical-align: middle
                   display: table-cell
-              
+
               .project-title
                 margin: 0 50px 90px 26px
 
@@ -1887,7 +1887,7 @@
           .sequenced-inner
             .sequenced-content-wrap
               video
-                left: 5%
+                left: 0%
 
         .work.stuff,
         .world.stuff
